  counts in unique sequence output file.
+ Removed case insensitivity - requiring all sequences to have matching case.
+ Removed 'first' and 'last' from --act choices to avoid unexpected behavior.

MaskPrimers:
+ Changed behavior of N characters in primer identification. Ns now count as a
  match against any character, rather than a mismatch.

PairSeq:
+ Performance improvements. The tool should now be considerably faster on very
  large files.
+ Removed output of sequences which do not have a mate pair (pair-fail file).

SplitSeq
+ Removed --clean (and --failed) flag from all subcommands.

-------------------------------------------------------------------------------
June 10, 2014
Version 0.4.4

SplitSeq:
+ Removed a *nix-specific dependency, allowing SplitSeq to work on Windows.

-------------------------------------------------------------------------------
April 7, 2014
Version 0.4.3

CollapseSeq:
+ Fixed bug that occurs with Python 2.7.5 on OS X.

SplitSeq:
+ Fixed bug in samplepairs subcommand that occurs with Python 2.7.5 on OS X.

-------------------------------------------------------------------------------
March 20, 2014
Version 0.4.2

Increased verbosity of exception reporting.

IgCore:
+ Updates to consensus functions to support changes to BuildConsensus.

AssemblePairs:
+ Set default alpha to 0.01.

BuildConsensus:
+ Added support for '--freq (value)' parameter to quality consensus method
  and set default value to 0.6.
+ Fixed a bug in the frequency consensus method where missing values were
  contributing to the total character count at each position.
+ Added the parameter '--maxmiss (value)' which provides a cut-off for removal 
  of positions with too many N or gap characters .

MaskPrimers:
+ Renamed the '--reverse' parameter to '--revpr'.

SplitSeq:
+ Removed convert subcommand.

-------------------------------------------------------------------------------
January 27, 2014
Version 0.4.1
