@@ -49,6 +49,10 @@ CollapseSeq:
 MaskPrimers:
 + Changed behavior of N characters in primer identification. Ns now count as a
   match against any character, rather than a mismatch.
++ Changed behavior of mask mode such that positions masked with Ns are now
+  assigned quality scores of 0, rather than retaining their previous scores.
++ Fixed a bug with the align subcommand where deletions within the input
+  sequence (gaps in the alignment) where not being handled correctly.
 
 PairSeq:
 + Performance improvements. The tool should now be considerably faster on very
